<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fotoUsuario"
        android:layout_width="125dp"
        android:layout_height="121dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/desFotoUsuario"
        android:src="@drawable/icono_basico_perfil"
        app:civ_border_color="#99000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editarPerfil"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/botonBPerfil"
        android:text="@string/editarPerfil"
        android:textColor="@color/textoBoton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoUsuario"
        tools:text="@string/editarPerfil" />

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nombreUsuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPerfil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrueba1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeguidores"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="64dp"
                android:gravity="center"
                android:text="@string/tvSeguidores"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSiguiendo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="64dp"
                android:gravity="center"
                android:text="@string/tvSeguidores"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvComentario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvComentario"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNSeguidores"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="54dp"
                android:text="@string/tvNSeguidores"
                android:textColor="@color/textoContri_Segui_Sigui"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNSiguiendo"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="54dp"
                android:text="@string/tvNSeguidores"
                android:textColor="@color/textoContri_Segui_Sigui"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNComentario"
                android:layout_width="97dp"
                android:layout_height="match_parent"
                android:text="@string/tvNComentario"
                android:textColor="@color/textoContri_Segui_Sigui"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="280dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrueba2"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:stretchMode="columnWidth" />
        <!-- https://www.youtube.com/watch?v=MRv0xtnaJAY -->
    </LinearLayout>

    <TextView
        android:id="@+id/tvLinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvLinea"
        android:textColor="@color/textoBoton"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.285"
        android:textSize="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>