<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="292dp"
        android:layout_marginBottom="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailRegistro"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/passRegistro"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/IniciarSesionLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="iniciarSesion"
            android:text="@string/iniciarSesionRegistro" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="¿Aun no tienes una cuenta?" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toRegistro"


                android:text="@string/menuRegistro" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/logoRefind2"
        android:layout_width="217dp"
        android:layout_height="186dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        app:srcCompat="@drawable/ic_icon_refind"
        tools:srcCompat="@drawable/ic_icon_refind" />

</androidx.constraintlayout.widget.ConstraintLayout>